--- a/Proyecto1_201700328/Proyecto1_201700328/Proyecto1_201700328.csproj
+++ b/Proyecto1_201700328/Proyecto1_201700328/Proyecto1_201700328.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analizadores\Analisis_Lexico.cs" />
+    <Compile Include="Analizadores\Analisis_Sintactico.cs" />
+    <Compile Include="Analizadores\Token_lenguaje.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +57,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -75,6 +81,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Imagenes\abrir_archivo.png" />
+    <Content Include="Imagenes\arboll.png" />
+    <Content Include="Imagenes\automata.png" />
+    <Content Include="Imagenes\Expresion3.jpg" />
+    <Content Include="Imagenes\grafica.png" />
+    <Content Include="Imagenes\guardar_archivo.png" />
+    <Content Include="Imagenes\guardar_como.png" />
+    <Content Include="Imagenes\next.png" />
+    <Content Include="Imagenes\previous.png" />
+    <Content Include="Imagenes\reportehtml.png" />
+    <Content Include="Imagenes\siguientes.png" />
+    <Content Include="Imagenes\transiciones.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
