--- a/Proyecto1_201700328/Proyecto1_201700328/Proyecto1_201700328.csproj
+++ b/Proyecto1_201700328/Proyecto1_201700328/Proyecto1_201700328.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Analizadores\Analisis_Lexico.cs" />
     <Compile Include="Analizadores\Analisis_Sintactico.cs" />
+    <Compile Include="Analizadores\Expresion_Lexema.cs" />
     <Compile Include="Analizadores\Token_lenguaje.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -58,6 +59,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reportes_HTML\Reporte_html.cs" />
+    <Compile Include="Reportes_XML\Reporte_XML.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
