--- a/Proyecto1_201700328/Proyecto1_201700328/Proyecto1_201700328.csproj
+++ b/Proyecto1_201700328/Proyecto1_201700328/Proyecto1_201700328.csproj
@@ -50,12 +50,17 @@
     <Compile Include="Analizadores\Analisis_Sintactico.cs" />
     <Compile Include="Analizadores\Expresion_Lexema.cs" />
     <Compile Include="Analizadores\Token_lenguaje.cs" />
+    <Compile Include="Analsis_thompson\metodo_de_thompson.cs" />
+    <Compile Include="Analsis_thompson\Nodo.cs" />
+    <Compile Include="Analsis_thompson\Tablas_de_informacion.cs" />
+    <Compile Include="Analsis_thompson\Transicion.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Graficadora\Graficadora.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reportes_HTML\Reporte_html.cs" />
